--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "mocha": "^5.2.0",
+    "morgan": "~1.9.0",
+    "pryjs": "^1.0.3",
+    "save": "^2.3.2"
   }
 }
