--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "knex": "^0.14.6",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
+    "pg": "^7.4.3",
     "pryjs": "^1.0.3",
     "save": "^2.3.2"
   }
